my-xmonad-configuration/.xmonad/xmonad.errors

xmonad.hs:62:42: error:
    Variable not in scope: xmobarEscape :: [Char] -> [Char]
   |
62 | myClickableWorkspaces = clickable . (map xmobarEscape)
   |                                          ^^^^^^^^^^^^
